--- a/resources/scripts/BUILD
+++ b/resources/scripts/BUILD
@@ -1,7 +1,7 @@
 # Copyright (c) 2016 Dustin Doloff
 # Licensed under Apache License v2.0
 
-load("@rules_web//:web.bzl",
+load("@rules_web//js:js.bzl",
     "closure_compile",
 )
 
