--- a/resources/scripts/BUILD
+++ b/resources/scripts/BUILD
@@ -1,19 +1,23 @@
 # Copyright (c) 2016, 2018 Dustin Doloff
 # Licensed under Apache License v2.0
 
-load("@rules_web//js:js.bzl",
+load(
+    "@rules_web//js:js.bzl",
     "closure_compile",
 )
 
 closure_compile(
     name = "all_js",
-    srcs = [ ":main_js", "google-analytics.js" ],
-    visibility = [ "//visibility:public" ],
+    srcs = [
+        "google-analytics.js",
+        ":main_js",
+    ],
     compilation_level = "WHITESPACE_ONLY",
+    visibility = ["//visibility:public"],
 )
 
 closure_compile(
     name = "main_js",
-    srcs = [ "all.js" ],
+    srcs = ["all.js"],
     compilation_level = "ADVANCED",
 )
