--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev-server": "parcel index.html",
     "build": "parcel build index.html && npm run copy-config",
-    "copy-config": "cp .s3uploadconfig.json dist",
+    "copy-config": "cp ./configuration/.s3uploadconfig.json ./dist",
     "deploy": "./scripts/deploy",
     "clean": "rm -rf dist/",
     "release": "npm run clean && npm run build && npm run deploy"
