--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Full Build
         run: |
           npm ci
-          npm run build
+          npm run build-and-test
       - name: Deploy
         if: github.ref == 'refs/heads/main'
         env:
