--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "dev-server": "parcel index.html",
     "build": "parcel build index.html && npm run copy-config",
     "copy-config": "cp ./configuration/.s3uploadconfig.json ./dist",
+    "format": "prettier --config=configuration/.prettierrc.json --write .",
+    "format-check": "prettier --config=configuration/.prettierrc.json --check .",
+    "build-and-test": "npm run build && npm run format-check",
     "deploy": "./scripts/deploy",
     "clean": "rm -rf dist/",
     "release": "npm run clean && npm run build && npm run deploy"
@@ -15,6 +18,7 @@
     "parcel": "^2.3.1",
     "posthtml-doctype": "^1.1.1",
     "posthtml-include": "^1.7.2",
+    "prettier": "^2.5.1",
     "s3-upload-custom-resource-lambda-layer": "^1.0.3"
   }
 }
