Fix prettier check-in

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "dev-server": "parcel index.html",
     "build": "parcel build index.html && npm run copy-config",
     "copy-config": "cp ./configuration/.s3uploadconfig.json ./dist",
-    "format": "prettier --config=configuration/.prettierrc.json --write .",
-    "format-check": "prettier --config=configuration/.prettierrc.json --check .",
+    "format": "prettier --write .",
+    "format-check": "prettier --check .",
     "build-and-test": "npm run build && npm run format-check",
     "deploy": "./scripts/deploy",
     "clean": "rm -rf dist/",
