--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "www_dustintoff_com",
   "version": "1.0.0",
   "scripts": {
-    "dev-server": "parcel index.html",
-    "build": "parcel build index.html && npm run copy-config",
+    "dev-server": "parcel resources/html/index.html",
+    "build": "parcel build resources/html/index.html && npm run copy-config",
     "copy-config": "cp ./configuration/.s3uploadconfig.json ./dist",
     "format": "prettier --write .",
     "format-check": "prettier --check .",
